# YRender

./: CMakeLists.txt  README.md
inc/: Camera.h  EGLM.h  GWindow.h  Lighting.h  Render.h  Shader.h  glad.h
shader/: default.fs  default.vs
src/: Camera.cpp  GWindow.cpp  Lighting.cpp  Render.cpp  Shader.cpp  example.cpp  glad.c
